--- a/views/articles/include/_form_fields.ejs
+++ b/views/articles/include/_form_fields.ejs
@@ -13,5 +13,5 @@
   <textarea required name="markdown" id="markdown" class="form-control"><%= article.markdown %></textarea>
 </div>
 
-<a href="/" class="btn btn-secondary">Cancel</a>
-<button type="submit" class="btn btn-primary">Save</button>
+<a href="/" class="btn btn-secondary">Cancel <i class="fas fa-ban"></i></a>
+<button type="submit" class="btn btn-primary">Save <i class="fas fa-save"></i></button>
