--- a/views/articles/edit.ejs
+++ b/views/articles/edit.ejs
@@ -1,8 +1,12 @@
 <%- include("include/_header") %>
 
 <body>
+  <%- include("include/_navigation") %>
+
   <div class="container m-4">
-    <h1 class="mb-4">Edit Article</h1>
+    <div class="d-flex justify-content-center">
+      <h1 class="mb-4">Edit Article</h1>
+    </div>
     
     <form action="/articles/<%= article.id %>?_method=PUT" method="POST">
       <%- include("include/_form_fields") %>
