--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -1,12 +1,18 @@
 <%- include("include/_header") %>
 
 <body>
+  <%- include("include/_navigation") %>
+
   <div class="container m-4">
-    <h1 class="mb-4">Blog Articles</h1>
-    <a href="/articles/new" class="btn btn-success">Compose <i class="fas fa-plus-square"></i></a>
+    <div class="d-flex flex-column">
+      <div class="text-center">
+        <h1 class="mb-4">Articles</h1>
+        <a href="/articles/new" class="btn btn-success">Compose <i class="fas fa-plus-square"></i></a>
+      </div>
+    </div>
 
     <% articles.forEach(article => { %>
-      <div class="card mt-4">
+      <div class="card mt-4 p-2">
         <div class="card-body">
           <h3 class="card-title"><%= article.title %></h3>
           <div class="card-subtitle text-muted mb-2"><%= article.createdAt.toLocaleDateString() %></div>
