--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -3,7 +3,7 @@
 <body>
   <%- include("include/_navigation") %>
 
-  <div class="container m-4">
+  <div class="container mx-auto my-4">
     <div class="d-flex flex-column">
       <div class="text-center">
         <h1 class="mb-1"><%= article.title %></h1>
@@ -14,7 +14,7 @@
     </div>
     
     <hr class="mt-4">
-    <div class="mt-4 px-4">
+    <div class="mt-4 px-2">
       <%- article.sanitizedHtml %>
     </div>
   </div>
